# PaperAgent

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
.codex/skills/paperagent-dev/: SKILL.md
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
scripts/: datalab.py  glm46v_pdf_to_md.py  marker_pdf_to_md_trial.py
src/paperagent/: __init__.py  config.py  logging_utils.py  services.py
src/paperagent/agent/: paper_resolution.py  prompts.py  service.py
src/paperagent/cli/: app.py
src/paperagent/ingest/: chunking.py  pdf_parser.py  profile_service.py  service.py
src/paperagent/ppt/: __init__.py  enrichment.py  planning.py  rendering.py  service.py  skill_builder.mjs
src/paperagent/prompts/: agent_general_system.txt  agent_paper_system.txt  paper_profile_system.txt  ppt_generation_skill.txt  ppt_planner_system.txt  ppt_slide_writer_system.txt
src/paperagent/retrieval/: catalog_service.py  embeddings.py  service.py
src/paperagent/schemas/: models.py
src/paperagent/storage/: database.py  repositories.py
src/paperagent/web/: api.py
tests/: conftest.py  test_agent_config.py  test_agent_ppt_api.py  test_catalog_search.py  test_cli_pptgen.py  test_ingest_retrieval.py  test_ppt_enrichment.py  test_ppt_planning.py  test_ppt_rendering.py  test_ppt_resolution.py  test_ppt_schema.py  test_ppt_service.py  test_prompt_loader.py  test_smoke.py  test_storage_profiles.py
